# COPILOT-BOT

./: .env.example  .gitignore  .replit  AI_LEARNING_SUMMARY.md  CONFIGURATION_GUIDE.md  DEPLOYMENT.md  HOW_TO_USE.md  INTEGRATION_GUIDE.md  OLLAMA_SETUP.md  QUICK_START.md  README.md  README_MINIMAL.md  README_REPLIT.md  README_UNIFIED.md  SEAMLESS_WORKFLOW.md  SETUP_GUIDE.md  SETUP_OLLAMA.md  TOKEN_config.py  UNIFIED_MAIN_SUMMARY.md  UPDATE_SUMMARY.md  VOICE_MODE_BENEFITS.md  ai_assistant_config.json  ai_assistant_config.py  ai_integration_demo.py  ai_learning.py  ai_signal_detector.py  ai_standalone.py  app_cli.py  app_config.py  app_core_trading.py  app_dashboard.py  app_logger.py  app_safe_wallet.py  bot_performance.json  cleanup_redundant_files.py  config.py  dashboard.py  demo_minimal.py  dry_run.py  indicators.py  (+50 more)
cli/: set_mode.py  view_audit_log.py
config/: safety_config.py  trade_config.py
core/: analyzer.py  drift_client.py  excecuter.py  indicators.py  jupiter_api.py  jupiter_feed.py  jupiter_integration.py  market_data.py  multi_signal.py  pnl_moniter.py  position_manager.py  price_fetcher.py  report.py  signal_detector.py  signal_excecuter.py  simulation_engine.py  strategy_selector.py  trigger.py  visualizer.py
dashboard/: __init__.py  dashboard.py  minimal_dashboard.py  trading_dashboard.py  web_dashboard.py
docs/: strategy.md
logger/: audit_logger.py
safe_wallet_manager/: README.md  config.py  safe_swap.py  transfer_logger.py
strategy/: signal_detector.py
utils/: config.py  dry_run.py  setup.sh
wallet/: TOKEN_config.py  logger.py  (+4 more)
(+5 files in other folders)
